solution to jsbase shows movies

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="field">
           <input id="textField" oninput="inputChanged(event)" class="ui input">
           <div id="output"></div>
-          <button type="button" class="ui button primary" onclick="showCounts()">Show Data Info</button>
+          <button type="button" class="ui button primary" onclick="showMovies()">Show Data Info</button>
         </div>
       </form>
     </div>
